projects/giri-cost/namespacenetworkpolicyrules/artifacts/system-ns-rule1/xwing-block-rule.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: system-cilium-test-xwing-block
spec:
  endpointSelector:
    matchLabels:
      org: empire
      class: deathstar
  ingress:
  - fromEndpoints:
    - matchLabels:
        org: empire
    toPorts:
    - ports:
      - port: "80"
        protocol: TCP
